# NeoVis

./: CMakeLists.txt  CONTRIBUTING.md  NEOVIS_LICENSE.md  README.md
NeoVis/: CMakeLists.txt  config.txt  imgui.ini
NeoVis/source/: CSDRVis.cpp  CSDRVis.h  Main.cpp  NeoVis.cpp  NeoVis.h  imgui_extra.cpp  imgui_extra.h
NeoVis/source/imgui/: imgui-SFML.cpp
NeoVis/visadapter/: VisAdapter.py
source/: CSDRVis.cpp  CSDRVis.h  CSDR_Vis.cpp  CSDR_Vis.h  Main.cpp  imgui_extra.cpp  imgui_extra.h  main.cpp  visadapter.cpp  visadapter.h
source/imgui/: imconfig.h  imgui-SFML.cpp
visadapter/: visadapter.py
